<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">
    <ImageView
        android:id="@+id/location_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/from"/>
    <Spinner
        android:id="@+id/region_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/location_image"
        android:layout_toRightOf="@+id/location_image" />
    <LinearLayout
        android:id="@+id/city_layout"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/location_image"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/from"
            android:visibility="invisible"/>
        <Spinner
            android:id="@+id/city_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:visibility="visible"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/price_layout"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/city_layout"
        android:orientation="horizontal"
        android:visibility="visible">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="Цена"/>
        <EditText android:id="@+id/price_from"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:hint="@string/from"
            android:singleLine="true"
            android:inputType="numberDecimal"
            android:maxLength="10"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="--"/>
        <EditText android:id="@+id/price_to"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:hint="@string/to"
            android:singleLine="true"
            android:inputType="numberDecimal"
            android:maxLength="18"/>
        <TextView
            android:id="@+id/price_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="сом"/>
    </LinearLayout>
    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/search_go"
        android:layout_below="@+id/price_layout"
        android:layout_alignParentRight="true"/>
</RelativeLayout>