<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="kg.azat.azat.EditPostActivity">
    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar">
    </include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <RelativeLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <LinearLayout android:focusable="true"
                android:focusableInTouchMode="true" android:layout_width="0px"
                android:layout_height="0px" />

            <ProgressBar
                android:id="@+id/progBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:layout_centerInParent="true"/>
            <android.support.v4.view.ViewPager
                android:id="@+id/pager"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_alignParentTop="true"/>
            <kg.azat.azat.lib.CirclePageIndicator
                android:id="@+id/indicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pager"
                android:layout_centerHorizontal="true"/>

            <Button
                android:id="@+id/btnCategory"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dip"
                android:textSize="15dp"
                android:text="@string/choose_category_ru"
                android:background="@drawable/btn_selector"
                android:textColor = "@android:color/white"
                android:layout_below="@+id/indicator"/>

            <EditText android:id="@+id/content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:hint="Текст объявления"
                android:singleLine="false"
                android:textColorHint="@color/blue_light"
                android:maxLength="81"
                android:layout_below="@+id/btnCategory"/>

            <EditText android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/price_hint"
                android:singleLine="true"
                android:textColorHint="@color/blue_light"
                android:inputType="numberDecimal"
                android:maxLength="18"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/content"/>
            <Spinner android:id="@+id/price_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@+id/price"
                android:layout_below="@+id/content"/>
            <Button
                android:id="@+id/btnPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="1dp"
                android:text="@string/save"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>
